[tool.poetry]
name = "baddns"
version = "1.13.0"
description = "Check subdomains for subdomain takeovers and other DNS tomfoolery"
authors = ["liquidsec <paul.mueller08@gmail.com>"]
repository = "https://github.com/blacklanternsecurity/baddns"
homepage = "https://github.com/blacklanternsecurity/baddns"
documentation = "https://www.blacklanternsecurity.com/baddns/"
license = "GPL-3.0"
readme = "README.md"
include = ["signatures/**/*"]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
dnspython = "^2.4.2"
colorama = "^0.4.6"
python-whois = "^0.9.6"
tldextract = "^5.1.1"
python-dateutil = "2.9.0.post0"
httpx = ">=0.27.0,<0.29.0"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.11.0"
pytest = "^8.3.3"
pytest-cov = ">=5,<8"
pytest-asyncio = ">=0.21.1,<1.3.0"
pytest-mock = "^3.11.1"
pytest-httpx = ">=0.33,<0.36"
pyfakefs = ">=5.10,<7.0"
mock = "^5.1.0"
poetry-dynamic-versioning = {extras = ["plugin"], version = "^1.5.0"}
requests = "^2.31.0"
ruff = "^0.15.4"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.8"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["F", "E722"]
ignore = ["F403", "F405", "F541"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401", "F403"]

[tool.poetry.scripts]
baddns = 'baddns.cli:main'

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
format = '1.13.{distance}'
